<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2010 Daniel Weisser

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/host"
        android:inputType="textUri" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encryption_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/encryption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:inputType="numberSigned"
        android:text="@string/defaultLdapPort" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:scrollHorizontally="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/password_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_name_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/account_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:scrollHorizontally="true" 
        android:hint="@string/account_name"/>

    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="next"
        android:text="@string/next_button" />

</LinearLayout>
</ScrollView>